Booking test for Clear trip

--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,2 @@
-ATTurl=http://lsdatwtcqa01:8080/iweb/attHome.html
-ATTserver=SDCQASQL103\\SQL2008_2
-timeout=60
-navigation=img[class='circle']
+url=http://www.cleartrip.com
+timeout=10
